--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "moment": "^2.24.0",
+    "radium": "^0.26.0",
     "react": "^16.12.0",
+    "react-animations": "^1.0.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.1"
+    "react-icons": "^3.9.0",
+    "react-scripts": "3.3.1",
+    "react-smooth": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
